# DSPyTUI

./: .browser-echo-mcp.json  GEMINI.md  README.md  gitGemini.md
.taskmaster/: state.json
.taskmaster/docs/: DSPyTUI.md
dspy-textual-tui/: .env.example  README.md  pyproject.toml
dspy-textual-tui/src/dspy_tui/: __init__.py  agent.py  lm_config.py  main.py  signatures.py
dspy-textual-tui/tests/: test_agent.py
